[package]
name = "passacaglia"
description = "A command-line utility that generates music in the form of Lilypond files."
version = "1.3.0"
edition = "2021"
license = "MPL-2.0 OR CC-BY-SA-4.0"
keywords = ["music", "composition", "piano", "procedural", "generation"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
midly = "0.5.3"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
